emily.css
* {
  box-sizing: border-box;
}

body {
  background-color: #FAF7EF;
  font-size: 1.5em;
  /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.6;
  font-weight: 400;
  /*font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
  font-family: "Playfair Display", serif;
  color: #35313C;
}

a {
  color: #35313C;
}

ul {
  margin-bottom: 0;
}

h1,
h2,
h3,
h4,
li {
  font-family: 'Playfair Display', serif;
}

h2 {
  font-weight: 800;
  text-align: left;
}

h3 {
  font-weight: 700;
}

h5 {
  margin-bottom: 5px;
}

h6 {
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  margin-bottom: 10px;
}

p {
  font-family: 'Lato', sans-serif;
}

ul li:last-child {
  margin-bottom: 0;
}

.draft {
  float: right;
  max-width: 700px;
}

.social {
  float: left;
  max-width: 350px;
}

.values row {
  padding-bottom: 10px;
}

.nav {
  padding-top: 1%
}

.container {
  max-width: 1600px;
  /* change this to anything you want or remove it, but I have a big monitor and 80% is still a lot of screen space */
  width: 95%;
}

.nav h3 a {
  text-decoration: none;
}

.nav h3 a:hover {
  color: #D1D9AE;
}

.nav h3 {
  font-size: 24px;
}

.nav li {
  font-size: 18px;
}

.nav-list {
  font-weight: 700;
}

.values {
  padding: 60px 0 60px 0;
}

.values h4,
.strengths h4 {
  margin-top: 0;
}

.values p {
  margin-top: 20px;
  font-size: 18px;
}

/*
.fill-wrapper {
 background-color: #FCFAF9;
  padding: 20px 0 40 0;
}
*/
.strengths li {
  font-size: 18px;
}

/* Some mobile-specific layout tweaks */
@media (max-width: 549px) {
  .nav li {
    display: inline;
  }

  .nav li:not(:last-child) {
    margin-right: 15px;
  }
}

/* Things will switch to a stacked layout below this breakpoint, so we don't
   want to force heights. Also vh is bad news on mobile. */
@media (min-width: 550px) {

  html,
  body,
  .page {
    height: 100%;
  }

  .nav li {
    display: inline;
  }

  .container {
    width: 95%;
  }

  .body {
    height: calc(100vh - 185px);
  }

  .values h4,
  .strengths h4 {
    margin: 0;
  }

  .values p {
    font-size: 18px;
  }

  .strengths p {
    font-size: 18px;
  }

  .footer-wrapper {
    height: 80px;
  }
}

.resume-list-wrapper li {
  font-family: 'Lato', sans-serif;
}

.resume h6 {
  margin-top: -5px;
}

